--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -12,4 +12,6 @@
     {{ with .Params.forestry_instant_preview_id }}
       {{- safeHTML (printf "<meta property='forestry_instant_preview_id' content='%s'>" .) -}}
     {{ end -}}
+
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
